@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <project name="ont" default="war" basedir=".">
 
+	<property file="version.properties" />
 	<property file="build.properties" />
 	<property name="build.dir" value="_generated" />
 
@@ -10,6 +11,7 @@
 			<include name="servlet*.jar" />
 		</fileset>
 		<pathelement path="${java.class.path}/" />
+		<pathelement path="WebContent/WEB-INF/lib/commons-fileupload-1.2.1.jar" />
 		<pathelement path="WebContent/WEB-INF/lib/commons-io-1.4.jar" />
 		<pathelement path="WebContent/WEB-INF/lib/junit.jar" />
 		<pathelement path="WebContent/WEB-INF/lib/commons-logging-1.1.1.jar" />
@@ -25,6 +27,9 @@
 
 	<target name="init">
 		<fail unless="aquaportal.jdbc.password" />
+		<tstamp>
+		    <format property="ont.app.build" pattern="yyyyMMddHHmmss" />
+		</tstamp>
 	</target>
 
 	<target name="compile" depends="init">
@@ -43,12 +48,23 @@
 		</jar>
 	</target>
 
+	<!-- creates the mmiuri jar -->
+	<target name="mmiuri" depends="compile">
+		<mkdir dir="${build.dir}/lib" />
+		<jar destfile="org.mmisw.ont.mmiuri.jar">
+			<fileset dir="${build.dir}/classes">
+				<include name="org/mmisw/ont/MmiUri.class" />
+			</fileset>
+		</jar>
+	</target>
+
+	
 	<!-- creates the vocabulary jar -->
 	<target name="voc-jar" depends="compile">
 		<mkdir dir="${build.dir}/lib" />
 		<jar destfile="org.mmisw.ont.vocabulary.jar">
 			<fileset dir="${build.dir}/classes">
-				<include name="org/mmisw/ont/vocabulary/**.class" />
+				<include name="org/mmisw/ont/vocabulary/**/*.class" />
 			</fileset>
 		</jar>
 	</target>
@@ -82,7 +98,8 @@
 		<copy file="WebContent/WEB-INF/web.xml" 
 			tofile="${build.dir}/tmp.WebContent/WEB-INF/web.xml" overwrite="true">
 			<filterset>
-				<filter token="ont.app.logfilepath" value="${ont.app.logfilepath}" />
+				<filter token="ont.app.version" value="${ont.app.version}" />
+				<filter token="ont.app.build"   value="${ont.app.build}" />
 				<filter token="aquaportal.datasource.name" value="${aquaportal.datasource.name}" />
 				<filter token="aquaportal.uploads.directory" value="${aquaportal.uploads.directory}" />
 				<filter token="aquaportal.datasource" value="${aquaportal.datasource}" />
