@@ -1,0 +1,8 @@
+############################################################################
+# Version properties for the org.mmisw.ont service
+# Carlos Rueda - MMI / MBARI
+# Created: 2009-03-15
+############################################################################
+
+# Version
+ont.app.version=0.2.0.beta5
